@@ -1,0 +1,3 @@
+name = Catmandu-Atom
+[@Milla]
+installer = ModuleBuild
